--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # This file is used to ignore files which are generated
 # ----------------------------------------------------------------------------
 
+# image and project files
+*.jpg
+
+# Visual Studio generated files
+x64/
+
 *~
 *.autosave
 *.a
