--- a/.gitignore
+++ b/.gitignore
@@ -55,14 +55,13 @@ Thumbs.db
 *.idb
 *.ilk
 *.pdb
-*.sln
 *.suo
 *.vcproj
+*.user
 *vcproj.*.*.user
 *.ncb
 *.sdf
 *.opensdf
-*.vcxproj
 *vcxproj.*
 
 # MinGW generated files
