--- a/STL-guideline-editor.vcxproj
+++ b/STL-guideline-editor.vcxproj
@@ -14,6 +14,8 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MainWindow.cpp" />
     <ClCompile Include="View.cpp" />
+    <ClCompile Include="ViewAP.cpp" />
+    <ClCompile Include="ViewLAT.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="MainWindow.h" />
@@ -28,8 +30,8 @@
     <QtUic Include="MainWindow.ui" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="ViewAP.h" />
-    <ClInclude Include="ViewLAT.h" />
+    <QtMoc Include="ViewAP.h" />
+    <QtMoc Include="ViewLAT.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{BB95B378-28BA-4D77-ADB7-7D0B3BDCA856}</ProjectGuid>
