refactor: Add MainWindow::update() prototype

--- a/STL-guideline-editor.vcxproj
+++ b/STL-guideline-editor.vcxproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <ClInclude Include="BaseLineStatus.h" />
     <ClInclude Include="BaseLineType.h" />
+    <ClInclude Include="GlobalState.h" />
     <ClInclude Include="Mode.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
